Fix squished logo and update FAQ

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,11 +15,17 @@ header {
   display: flex;
   flex-direction: row;
 
-  img { // logo
-      flex-grow: 1;
-      max-width: 25%;
+  #logo {
+    flex: 1 0 auto;
 
-      clip-path: circle(46% at center);
+    width: 10em;
+    height: 10em;
+
+    clip-path: circle(48% at center);
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-shadow: none;
   }
 
   #title {
